--- a/views/server/file/list.jade
+++ b/views/server/file/list.jade
@@ -18,7 +18,7 @@ block content
                             td
                                 .gallery-item
                                     a(href='#{file.url}', target='_blank')
-                                        if (file.type.indexOf('image') > -1)
+                                        if (file.type && file.type.indexOf('image') > -1)
                                             img(src='#{file.md_url || file.url}', title='#{file.name}')
                                         else
                                             span.fa.file-holder(class='#{core.fileToIcon(file.type)}', title='#{file.name}')
