--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -33,9 +33,8 @@ html
                                 a.item(href='#{adminDir}') #{User.name}
                                 a.item(href='#{adminDir}/user/logout') 注销
                             else
-                                a.ui.inverted.button(href='#{adminDir}/user/login') 登录
-                                a.ui.inverted.button(href='#{adminDir}/user/register') 注册
-                block welcome
+                                a(href='#{adminDir}/user/login', style='margin-right: 16px;') 登录
+                                a(href='#{adminDir}/user/register') 注册
             
         .page
             block content
