--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -90,7 +90,7 @@ block foot-js
 
             $('#fileupload').fileupload({
                 //url: '/upload',
-                url: '/admin/file/add',
+                url: '/admin/file/add?_csrf=#{token}',
                 formData: {
                     _csrf: '#{token}'
                 },
