--- a/views/server/file/add.jade
+++ b/views/server/file/add.jade
@@ -37,9 +37,9 @@ block foot-js
         $(function () {
             $('#fileupload').fileupload({
                 //url: '/upload',
-                url: '/admin/file/add',
+                url: '/admin/file/add?_csrf=#{token}',
                 formData: {
-                    _csrf: '#{token}'
+                    //- _csrf: '#{token}'
                 },
                 dataType: 'json',
                 progressall: function(e, data) {
