--- a/views/server/index.jade
+++ b/views/server/index.jade
@@ -2,16 +2,14 @@ extends layout
 
 block content
     .console
-        h2 你好！当前角色: #{Roles}
+        h3 你好，#{User.name}
         //- if(User && User.roles)
-                each role in User.roles
-                    ul.list-group
-                        li.list-group-item 角色：
-                            span.label.label-primary #{role.name}
-                        li.list-group-item 权限：
-                            span.label.label-info #{role.actions}
-                        li.list-group-item 是否有'admin'权限：
-                            span #{role.actions && role.actions.indexOf('admin') > -1}
+            each role in User.roles
+                ul.list-group
+                    li.list-group-item 角色：
+                        span.label.label-primary #{role.name}
+                    li.list-group-item 权限：
+                        span.label.label-info #{role.actions}
     .row
         .col-md-3.col-sm-6
             a(href="#{adminDir}/content/")
