--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -2,6 +2,10 @@ extends ../layout
 block head-css
     link(rel='stylesheet', href='/assets/plugins/mditor/css/mditor.min.css')
     link(rel='stylesheet', href='//cdn.jsdelivr.net/jquery.fileupload/9.9.0/css/jquery.fileupload.css')
+    style(type='text/css').
+        .sortable-ghost{
+            border-color: #000;
+        }
 block content
     .row
         .col-md-12
@@ -78,6 +82,7 @@ block foot-js
     script(src='//cdn.jsdelivr.net/jquery.fileupload/9.9.0/js/jquery.fileupload-audio.js')
     script(src='//cdn.jsdelivr.net/jquery.fileupload/9.9.0/js/jquery.fileupload-video.js')
     script(src='//cdn.jsdelivr.net/jquery.fileupload/9.9.0/js/jquery.fileupload-validate.js')
+    script(src='//cdn.jsdelivr.net/npm/sortablejs@1.10.2/Sortable.min.js')
 
     script.
         Messenger.options = {
@@ -199,4 +204,7 @@ block foot-js
                     });
                 }
             })
+        });
+        new Sortable(document.querySelector('#J_gallery'), {
+          ghostClass: 'sortable-ghost'
         });
